<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register"
    tools:context=".SetupActivity">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/setup_profile_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:src="@drawable/profile" />

    <EditText
        android:id="@+id/setup_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/inputs"
        android:drawableLeft="@drawable/username"
        android:ems="10"
        android:hint="@string/hint_username"
        android:inputType="textMultiLine"
        android:padding="14dp" />

    <EditText
        android:id="@+id/setup_fullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="192dp"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/inputs"
        android:drawableLeft="@drawable/name"
        android:ems="10"
        android:hint="@string/hint_fullname"
        android:inputType="textMultiLine"
        android:padding="14dp" />

    <EditText
        android:id="@+id/_setup_country_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="127dp"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/inputs"
        android:drawableLeft="@drawable/country"
        android:ems="10"
        android:hint="@string/hint_country"
        android:inputType="textMultiLine"
        android:padding="14dp" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:background="@drawable/button"
        android:padding="14dp"
        android:paddingTop="8dp"
        android:text="@string/button_save"
        android:textColor="@color/light_color"
        android:textSize="20sp" />

</RelativeLayout>